--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
     <title>Hack The Tunnels Project</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hack The Tunnels Project</h1>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
